fix(ui): make the preview button smaller

--- a/assets/css/components/title-bar.css
+++ b/assets/css/components/title-bar.css
@@ -39,7 +39,6 @@
   position: fixed;
   top: 33px;
   right: 37px;
-  font-size: 20px;
   box-shadow: 5px 5px 11px 1px rgba(0, 0, 0, 0.5);
   color: var(--base);
 }
